Allow workflows to be triggered by UI.

--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -5,7 +5,8 @@ on:
     - cron:  '0 3 * * *'
   push:
     branches: [ main ]
-
+  workflow_dispatch:
+    
 jobs:
   build:
     runs-on: ubuntu-latest
